Add day adjustment

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Bloc Jams</title>
+        <title>Hanukkah Candles</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
         <link rel="stylesheet" type="text/css" href="styles/hanukkah.css">
@@ -31,6 +31,7 @@
             <img id="flame6" src="assets/flame.png" alt="Flame" style="width:30px;height:30px;">
             <img id="flame7" src="assets/flame.png" alt="Flame" style="width:30px;height:30px;">
             <img id="flame8" src="assets/flame.png" alt="Flame" style="width:30px;height:30px;">
+            <div id="day" onclick="advanceDay()">Day 1</div>
             
 
             
