add ability to change day

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <img id="flame6" src="assets/flame.png" alt="Flame" style="width:30px;height:30px;">
             <img id="flame7" src="assets/flame.png" alt="Flame" style="width:30px;height:30px;">
             <img id="flame8" src="assets/flame.png" alt="Flame" style="width:30px;height:30px;">
-            <div id="day" onclick="advanceDay()">Day 1</div>
+            <div id="day" class="dayClass">Day 1</div>
+            <div id="clickMsg" class="dayClass" onclick="advanceDay()">(Click to change day)</div>
             
 
             
