--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img id="flame7" src="assets/flame.png" alt="Flame" style="width:30px;height:30px;">
             <img id="flame8" src="assets/flame.png" alt="Flame" style="width:30px;height:30px;">
             <div id="currentDate">
-                <span id="month">December</span> <span id="day-of-month">28</span>, <span id="year" onclick="advanceYear">2016</span></div>
+                <span id="month">December</span> <span id="day-of-month">28</span>, <span id="year" onclick="advanceYear()">2016</span></div>
             <div id="day" class="dayClass" onclick="advanceDay()">Day 1</div>
             <div id="clickMsg" class="dayClass"  >(Click on 'Day' to change day. Click on year to change year.)</div>
             
