Tweak display of hover

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div id="currentDate">
                 <span id="month">December</span> <span id="day-of-month">28</span>, <span id="year" onclick="advanceYear()">2016</span></div>
             <div id="day" class="dayClass" onclick="advanceDay()">Day 1</div>
-            <div id="clickMsg" class="dayClass"  >(Click on 'Day' to change day. Click on year to change year.)</div>
+            <div id="clickMsg" class="dayClass"  >(Click on 'Day' to change day. Click on date to change year.)</div>
             
 
             
