Add mouseover/mouseout to add and remove help messages

--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
             <img id="flame6" src="assets/flame.png" alt="Flame" style="width:30px;height:30px;">
             <img id="flame7" src="assets/flame.png" alt="Flame" style="width:30px;height:30px;">
             <img id="flame8" src="assets/flame.png" alt="Flame" style="width:30px;height:30px;">
-            <div id="currentDate">
+            <div id="currentDate" onmouseover="dateMsg()" onmouseout="removeDateMsg()">
                 <span id="month">December</span> <span id="day-of-month">28</span>, <span id="year" onclick="advanceYear()">2016</span></div>
-            <div id="day" class="dayClass" onclick="advanceDay()">Day 1</div>
-            <div id="clickMsg" class="dayClass"  >(Click on 'Day' to change day. Click on date to change year.)</div>
+            <div id="day" class="dayClass" onclick="advanceDay()" onmouseover="dayMsg()" onmouseout="removeDayMsg()">Day 1</div>
+            <div id="clickMsg" class="dayClass"  >(Click on 'Day' to change day)</div>
+            <div id="clickMsg2" class="dayClass"  >(Click on date to change year.)</div>
             
 
             
