--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
             <img id="flame6" src="assets/flame.png" alt="Flame" style="width:30px;height:30px;">
             <img id="flame7" src="assets/flame.png" alt="Flame" style="width:30px;height:30px;">
             <img id="flame8" src="assets/flame.png" alt="Flame" style="width:30px;height:30px;">
-            <div id="currentDate" onmouseover="dateMsg()" onmouseout="removeDateMsg()">
-                <span id="month">December</span> <span id="day-of-month">28</span>, <span id="year" onclick="advanceYear()">2016</span></div>
+            <div id="overMsg" class="dayClass"  >Hanukkah is over, but it will begin again on <span id="nextHanukkah">December 45, 2017</span>. To see the animation in action, click on the date to select a year, and click on 'Day' to select a day of Hanukkah.</div>
+            <div id="currentDate" onmouseover="dateMsg()" onmouseout="removeDateMsg()" onclick="advanceYear()">
+                <span id="month">December</span> <span id="day-of-month">28</span>, <span id="year">2016</span></div>
             <div id="day" class="dayClass" onclick="advanceDay()" onmouseover="dayMsg()" onmouseout="removeDayMsg()">Day 1</div>
             <div id="clickMsg" class="dayClass"  >(Click on 'Day' to change day)</div>
             <div id="clickMsg2" class="dayClass"  >(Click on date to change year.)</div>
