Make background of flame transparent

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div id="candlestick"></div>
                 <div id="wick"></div>
                 <div id="flame0">
-                    <img id="flameProper" src="assets/flame.png" alt="Flame" style="width:30px;height:30px;">
+                    <img id="flameProper" src="assets/flame-trans.png" alt="Flame" style="width:30px;height:30px;">
                 </div>
             </div>
             <img id="flame1" src="assets/flame2.png" alt="Flame" style="width:30px;height:30px;"> 
