tweaking of messages and zindex

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
             <img id="flame6" src="assets/flame.png" alt="Flame" style="width:30px;height:30px;">
             <img id="flame7" src="assets/flame.png" alt="Flame" style="width:30px;height:30px;">
             <img id="flame8" src="assets/flame.png" alt="Flame" style="width:30px;height:30px;">
-            <div id="overMsg" class="dayClass"  >Hanukkah is over, but it will begin again on <span id="nextHanukkah">December 45, 2017</span>. To see the animation in action, click on the date to select a year, and click on 'Day' to select a day of Hanukkah.</div>
+            <div id="overMsg" class="dayClass">
+                Hanukkah is over, but it will begin again on <span id="nextHanukkah">December 45, 2017</span>. 
+                <br><span id="explain">To see the animation in action, click on the date to select a year, and click on 'Day' to select a day of Hanukkah.</span>
+                </div>
             <div id="currentDate" onmouseover="dateMsg()" onmouseout="removeDateMsg()" onclick="advanceYear()">
                 <span id="month">December</span> <span id="day-of-month">28</span>, <span id="year">2016</span></div>
             <div id="day" class="dayClass" onclick="advanceDay()" onmouseover="dayMsg()" onmouseout="removeDayMsg()">Day 1</div>
