add loading message

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                 <p>email: stevendaryl3016@yahoo.com</p>
                 <p>Original artwork found here: <span id="url">http://www.chanukkah2016.com/2016/07/happy-hanukkah-chanukah-2016-quotes-poems-sayings-cards-messages.html"</p>
             </div>
-
-            
+            <div id="loading">LOADING...</div>            
             
         </section>
         <script src="scripts/hanukkah.js"></script>
